디자인 및 기타

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".ChoiceMenu"></activity>
         <activity android:name=".RentList"></activity>
         <activity android:name=".sendRent"></activity>
+        <activity android:name=".checkremain"></activity>
     </application>
 
 </manifest>
